--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "MontserratMedium";
+  src: local("MontserratMedium"),
+  url("./fonts/Montserrat/static/Montserrat-Medium.ttf") format("truetype");
+  font-weight: bold;
+}
