--- a/src/styles/Accomodation.css
+++ b/src/styles/Accomodation.css
@@ -65,16 +65,19 @@
 }
 
 .description p,
-.equipements ul {
+.equipement ul {
     background-color: #f6f6f6;
     font-size: 18px;
+    font-family: MontserratMedium !important;
     color: #ff6060;
     height: auto;
-    padding: 30px 10px;
+    padding: 30px 15px;
     border-radius: 10px;
     font-weight: 400;
     display: list-item;
     list-style: none;
+    margin: 0;
+    width: 100%;
 }
 
 .equipements li {
