--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 .card {
     text-align: center;
+    margin-bottom: 15%;
 }
 
 .card img {
@@ -10,13 +11,37 @@
 }
 
 .card p {
+    text-align: left;
     position: absolute;
-    margin-left: 2%;
-    margin-right: 20%;
+    margin-left: 1%;
+    width: 250px;
     margin-top: -3%;
     font-size: 16px;
     line-height: 20px;
     color: white;
-    width: 250px;
-    text-align: left;
+}
+
+@media screen and (min-width: 375px) and (max-width: 768px) {
+    .card p {
+        text-align: left;
+        position: absolute;
+        margin-left: 7%;
+        width: 250px;
+        margin-top: -12%;
+        font-size: 16px;
+        line-height: 20px;
+        color: white;
+    }
+}
+@media only screen and (max-width: 374px) {
+    .card p {
+        text-align: left;
+        position: absolute;
+        margin-left: 7%;
+        width: 250px;
+        margin-top: -12%;
+        font-size: 16px;
+        line-height: 20px;
+        color: white;
+    }
 }
