--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -17,3 +17,34 @@
     color:#FF6060 !important;
     font-size: 1rem;
 }
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    .error h1{
+        font-size: 150px;
+    }
+}
+
+@media screen and (min-width: 375px) and (max-width: 768px) {
+    .error h1{
+        font-size: 150px;
+    }
+    .error p{
+        font-size: 1rem;
+    }
+    .error {
+        width: 80%;
+        margin: auto;
+    }
+}
+@media only screen and (max-width: 374px) {
+    .error h1{
+        font-size: 150px;
+    }
+    .error p{
+        font-size: 1rem;
+    }
+    .error {
+        width: 80%;
+        margin: auto;
+    }
+}
