--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -16,3 +16,19 @@
     margin-bottom: 3%;
 }
 
+@media screen and (min-width: 375px) and (max-width: 768px) {
+    .AboutUs .description .titre-Collapse {
+        width: 80%;
+    }
+    .AboutUs .description .no-collapse p {
+        width: 82%;
+    }
+}
+@media only screen and (max-width: 374px) {
+    .AboutUs .description .titre-Collapse {
+        width: 80%;
+    }
+    .AboutUs .description .no-collapse p {
+        width: 82%;
+    }
+}
