--- a/src/styles/Accomodation.css
+++ b/src/styles/Accomodation.css
@@ -17,8 +17,12 @@
     margin-bottom: 0;
 }
 
-.logement-title img {
-    border-radius: 50%;
+.rating {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: end;
+    margin-right: 5%;
+    margin-top: -8%;
 }
 
 .host {
@@ -29,6 +33,9 @@
 .host h3 {
     margin-right: 1em;
 }
+.host img {
+     border-radius: 50%;
+ }
 
 .logement-tags-rate-container {
     padding: 0 5% 0 5%;
@@ -84,4 +91,60 @@
     font-weight: 400;
     padding: 2px;
     margin-left: 20px;
+}
+
+@media screen and (min-width: 375px) and (max-width: 768px) {
+    .logement-title {
+        flex-direction: column;
+        align-items: self-start;
+    }
+    .logement-title-text h2 {
+        font-size: 18px;
+    }
+    .tags p {
+        padding: 5px 20px;
+        min-width: 0;
+        border-radius: 5px;
+        font-size: 10px;
+    }
+    .host {
+        width: 30%;
+        margin-right: 10%;
+    }
+    .host img {
+        width: 30%;
+    }
+    .host h3 {
+        font-size: 15px;
+    }
+    .rating{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        margin-top: 1%;
+    }
+    .rating .stars {
+        margin-left: 6%;
+    }
+    .rating .stars img {
+        width: 15%;
+    }
+    .collapse {
+        display: block;
+        width: 80%;
+        margin-top: 1rem;
+    }
+    .collapse .description {
+        margin-bottom: 5%;
+    }
+
+    .titre-Collapse h3 {
+        font-size: 15px;
+    }
+}
+@media only screen and (max-width: 374px) {
+    .carrousel-content {
+        height: 235px;
+    }
 }
